# app

./: .env  .gitignore  README.md  build.bat  key.pem
.github/workflows/: workflow.yml
backend/: .env  Cargo.toml  cert.pem
backend/migrations/: 20231103000001_create_users_table.sql
backend/src/: app.rs  main.rs
backend/src/controllers/: login.rs  logout.rs  mod.rs
backend/src/controllers/admin/: admin.rs
backend/src/controllers/appointment/: add_appointment.rs  delete_appointment.rs  get_appointment_details.rs  list_appointments.rs  mod.rs
backend/src/controllers/doctor/: doctor.rs  mod.rs
backend/src/controllers/locker/: locker_delete.rs  locker_download.rs  locker_upload.rs  mod.rs  utils.rs
backend/src/controllers/login/: login_finish.rs  login_start.rs
backend/src/controllers/me/: me.rs  mod.rs
backend/src/controllers/register/: mod.rs  register_finish.rs  register_start.rs
backend/src/controllers/static_files/: handler.rs
backend/src/controllers/user/: user.rs
backend/src/controllers/websocket/: mod.rs  websocket.rs
backend/src/domain/: error.rs  mod.rs  result.rs  user.rs
backend/src/middlewares/: mod.rs  role_middleware.rs
backend/src/repository/: appointments.rs  mod.rs  user.rs
backend/src/utils/: auth_middleware.rs  jwt.rs  mod.rs  opaque.rs  role_middleware.rs
frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  main.ts  styles.css
src/: app.rs  main.rs
src/domain/: result.rs
src/middlewares/: auth_middleware.rs
test/: README.md  package-lock.json  package.json
(+124 files in other folders)
