[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v7"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "uuid"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
opaque-ke = "4.0.1"
rand = "0.8.5"
base64 = "0.22.1"
sha2 = "0.10.9"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
thiserror = "2.0.17"
dotenvy = "0.15.7"
rust-embed = "8.9.0"
mime_guess = "2.0.5"
